--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,7 @@ jobs:
           path: ./docker.tar
 
       - name: restore docker
-
-        if: steps.cache.outputs.cache-hit == true
+        if: steps.cache.outputs.cache-hit == 'true'
         run: |
           sudo systemctl stop docker
           sudo tar -xf ./docker.tar
