--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
+        id: cache
         with:
           key: ${{ runner.os }}-docker-cache-${{ github.sha }}
           restore-keys: ${{ runner.os }}-docker-cache-
@@ -20,7 +21,7 @@ jobs:
       - name: restore docker
         if: steps.cache.outputs.cache-hit == 'true'
         run: |
-          sudo systemctl stop docker
+          sudo systemctl stop docker docker.socket
           sudo tar -xf ./docker.tar
           sudo rm -rf ./docker.tar /var/lib/docker 
           sudo mv var/lib/docker /var/lib/docker
@@ -32,6 +33,6 @@ jobs:
 
       - name: generate docker cache
         run: |
-          sudo systemctl stop docker
+          sudo systemctl stop docker docker.socket
           sudo tar -cf ./docker.tar /var/lib/docker
 
