--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           path: ./docker.tar
 
       - name: restore docker
-        if: steps.cache.outputs.cache-hit == 'true'
+        if: steps.cache.outputs.cache-matched-key != ''
         run: |
           sudo systemctl stop docker docker.socket
           sudo tar -xf ./docker.tar
