--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           restore-keys: ${{ runner.os }}-docker-cache-
           path: ./docker.tar
 
-      - run: echo 123 ${{ steps.cache.outputs.cache-matched-key }}
+      - run: echo "${{ steps.cache.outputs }}"
 #      - name: restore docker
 #        if: steps.cache.outputs.cache-matched-key != ''
 #        run: |
