--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,14 @@ jobs:
           restore-keys: ${{ runner.os }}-docker-cache-
           path: ./docker.tar
 
-      - run: echo "${{ steps.cache.outputs.cache-hit }}"
-      - run: echo "::debug::${{ toJSON(steps.cache.outputs) }}"
-#      - name: restore docker
-#        if: steps.cache.outputs.cache-matched-key != ''
-#        run: |
-#          sudo systemctl stop docker
-#          sudo tar -xf ./docker.tar
-#          sudo rm -rf /var/lib/docker
-#          sudo mv var/lib/docker /var/lib/docker
-#          sudo systemctl start docker
+      - name: restore docker
+        if: hashFiles('./docker.tar') != ''
+        run: |
+          sudo systemctl stop docker
+          sudo tar -xf ./docker.tar
+          sudo rm -rf /var/lib/docker
+          sudo mv var/lib/docker /var/lib/docker
+          sudo systemctl start docker
 
       - run: |
           docker compose up -d test-db --wait
