--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,21 @@ services:
       timeout: 1s
       retries: 10
 
-#  test:
-#    build:
-#      target: test-builder
-#      cache_from:
-#    depends_on:
-#      test-db:
-#        condition: service_healthy
-#    init: true
-#    ipc: host
-#    entrypoint: [ npx, jest, --bail ]
+  test:
+    build:
+      target: test-builder
+    depends_on:
+      test-db:
+        condition: service_healthy
+    init: true
+    ipc: host
+    entrypoint: [ npx, jest, --bail ]
 
-#  server:
-#    build: .
-#    image: localhost:5000/rabbit-server-nest:1.12
-#    container_name: rabbit-server-nest
-#    ipc: host
-#    ports: [ "8080:8080" ]
-#    volumes: [ ./env/production/.env:/app/env/production/.env ]
-#    entrypoint: [ node, dist/src/main ]
+  server:
+    build: .
+    image: localhost:5000/rabbit-server-nest:1.12
+    container_name: rabbit-server-nest
+    ipc: host
+    ports: [ "8080:8080" ]
+    volumes: [ ./env/production/.env:/app/env/production/.env ]
+    entrypoint: [ node, dist/src/main ]
