--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - run: docker images && docker ps -a
 
       - name: Build production app
-        run: docker compose up test --build
+        run: docker compose build app
 
       - run: docker images && docker ps -a
 
