--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,20 +27,16 @@ jobs:
           sudo mv var/lib/docker /var/lib/docker
           sudo systemctl start docker
 
-      - run: docker images && docker ps -a
-
       - name: Test
         run: docker compose up test --build
-
-      - run: docker images && docker ps -a
 
       - name: Build production server
         run: docker compose build server
 
-      - run: docker images && docker ps -a
-
       - name: Generate docker cache
         run: |
-          sudo docker compose down
+          docker compose down
+          docker builder prune --force
+          docker image prune --force --all
           sudo systemctl stop docker docker.socket
           sudo tar -cf ./docker.tar /var/lib/docker
