--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,6 @@ jobs:
         run: |
           docker compose down
           docker builder prune --force
-          docker rmi $(docker images -q)
+#          docker image prune --force --all
           sudo systemctl stop docker docker.socket
           sudo tar -cf ./docker.tar /var/lib/docker
