--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,9 @@ name: deploy
 on:
   push:
     branches:
-      #      - main
-
-      - develop
+      # - main
+      # - develop
+      - test
 
 jobs:
   deploy:
