--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,3 +40,13 @@ jobs:
           docker builder prune --force
           sudo systemctl stop docker docker.socket
           sudo tar -cf ./docker.tar /var/lib/docker
+
+      - name: cd
+        uses: docker/login-action@v3
+        with:
+          username: test
+          password: test
+          registry: test
+          logout: true
+
+
