--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,14 @@ on:
   push:
     branches:
       # - main
-      # - develop
-      - test
+       - develop
+#      - test
 
 jobs:
   deploy:
     runs-on: ubuntu-24.04
+#    env:
+#      REGISTRY_ENDPOINT: ${{ secrets.REGISTRY_ENDPOINT }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
@@ -41,12 +43,12 @@ jobs:
           sudo systemctl stop docker docker.socket
           sudo tar -cf ./docker.tar /var/lib/docker
 
-      - name: cd
-        uses: docker/login-action@v3
-        with:
-          username: test
-          password: test
-          registry: test
-          logout: true
+#      - name: cd
+#        uses: docker/login-action@v3
+#        with:
+#          username: test
+#          password: test
+#          registry: test
+#          logout: true
 
 
