--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-24.04
     env:
       REGISTRY_ENDPOINT: ${{ secrets.REGISTRY_ENDPOINT }}
-      REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-      REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
@@ -37,9 +35,9 @@ jobs:
       - name: Login registry
         uses: docker/login-action@v3
         with:
-          registry: ${ REGISTRY_ENDPOINT }
-          username: ${ REGISTRY_USERNAME }
-          password: ${ REGISTRY_PASSWORD }
+          registry: ${{ env.REGISTRY_ENDPOINT }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Build and push production server
         run: docker compose build server --push
