--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,13 @@ jobs:
         if: hashFiles('./docker.tar') != ''
         run: |
           sudo systemctl stop docker docker.socket
-          sudo tar -xf ./docker.tar
-          sudo rm -rf /var/lib/docker
-          sudo mv var/lib/docker /var/lib/docker
-          sudo systemctl start docker
+          sudo tar -xf ./docker.tar -C ./
+      #          sudo rm -rf /var/lib/docker
+      #          sudo mv var/lib/docker /var/lib/docker
+      #          sudo systemctl start docker
+      - run: ls -l
+
+      - run: rm sdfjlsdjfsdlfjlks
 
       - name: Test
         run: docker compose up test --build
@@ -49,7 +52,3 @@ jobs:
           docker builder prune --force
           sudo systemctl stop docker docker.socket
           sudo tar -cf ./docker.tar /var/lib/docker
-
-
-
-
