--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,16 +24,13 @@ jobs:
         if: hashFiles('./docker.tar') != ''
         run: |
           sudo systemctl stop docker docker.socket
-          sudo tar -xf ./docker.tar -C ./
-      #          sudo rm -rf /var/lib/docker
-      #          sudo mv var/lib/docker /var/lib/docker
-      #          sudo systemctl start docker
-      - run: ls -l
-
-      - run: rm sdfjlsdjfsdlfjlks
+          sudo rm -rf /var/lib/docker
+          sudo tar -xf ./docker.tar -C /
 
       - name: Test
-        run: docker compose up test --build
+        run: |
+          docker compose up test --build
+          docker compose down
 
       - name: Login registry
         uses: docker/login-action@v3
