--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Test
         run: |
+          docker compose up -d test-test
           docker compose up test --build
           docker compose down
 
