--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,10 +5,9 @@ on:
     branches:
       # - main
       - develop
-#      - test
 
 jobs:
-  deploy:
+  ci:
     runs-on: ubuntu-24.04
     env:
       REGISTRY_ENDPOINT: ${{ secrets.REGISTRY_ENDPOINT }}
@@ -49,3 +48,9 @@ jobs:
           docker builder prune --force
           sudo systemctl stop docker docker.socket
           sudo tar -cf ./docker.tar /var/lib/docker
+
+#  cd:
+#    needs: ci
+#    runs-on: ubuntu-24.04s
+#    steps:
+#      - run: ls
