--- a/deploy/Dockerfile-server
+++ b/deploy/Dockerfile-server
@@ -35,23 +35,23 @@ ARG PM2_VERSION
 WORKDIR /app
 
 RUN npm install pm2@${PM2_VERSION} --global
-COPY package.json package-lock.json ./
+COPY /package.json package-lock.json ./
 RUN npm clean-install
-COPY tsconfig.json tsconfig.build.json ./
-COPY src src
+COPY /tsconfig.json tsconfig.build.json ./
+COPY /src src
 
 FROM app-base AS test-builder
 
-COPY env/test/mikro-orm.config.ts env/test/
-COPY env/test/.env.ci env/test/.env
-COPY test test
+COPY /env/test/mikro-orm.config.ts env/test/
+COPY /env/test/.env.ci env/test/.env
+COPY /test test
 
 FROM app-base AS app-builder
 
 ARG NODE_ENV
 
-COPY nest-cli.json .
-COPY env/${NODE_ENV}/mikro-orm.config.ts env/${NODE_ENV}/
+COPY /nest-cli.json .
+COPY /env/${NODE_ENV}/mikro-orm.config.ts env/${NODE_ENV}/
 
 RUN npx nest build \
     && npm prune --production \
