배포 환경 설정 변경
- docker compose 서비스 실행 여부 체크 로직 변경
- 배포 스크립트 결과 출력 추가
- nginx port 지정 및 ipv6 listen 추가
- server 이미지에 curl 추가

--- a/deploy/Dockerfile-server
+++ b/deploy/Dockerfile-server
@@ -11,7 +11,7 @@ FROM ubuntu:noble AS node-builder
 ARG NODE_VERSION
 WORKDIR /node
 
-RUN apt-get update && apt install --yes --no-install-recommends \
+RUN apt update && apt install --yes --no-install-recommends \
     curl  \
     ca-certificates  \
     xz-utils \
@@ -26,6 +26,7 @@ ARG PLAYWRIGHT_VERSION
 
 COPY --from=node-builder /node /usr
 RUN npx playwright@${PLAYWRIGHT_VERSION} install chromium --with-deps \
+    && apt install curl --yes --no-install-recommends \
     && rm -rf ~/.npm /var/lib/apt/lists/*
 
 FROM playwright-builder AS app-base
