--- a/deploy/server.conf.template
+++ b/deploy/server.conf.template
@@ -1,5 +1,6 @@
 server {
     listen 443 ssl;
+    listen [::]:443 ssl;
     server_name ${SERVER_DOMAIN};
 
     ssl_certificate /mount/${SERVER_DOMAIN}_ecc/fullchain.cer;
