nginx ssl_stapling resolver ipv4 off

--- a/deploy/server.conf.template
+++ b/deploy/server.conf.template
@@ -1,5 +1,4 @@
 server {
-    listen 443 ssl;
     listen [::]:443 ssl;
     server_name ${SERVER_DOMAIN};
 
@@ -12,7 +11,7 @@ server {
     ssl_stapling on;
     ssl_stapling_verify on;
     ssl_trusted_certificate /mount/${SERVER_DOMAIN}_ecc/fullchain.cer;
-    resolver [2001:4860:4860::8888] [2001:4860:4860::8844];
+    resolver [2001:4860:4860::8888] [2001:4860:4860::8844] ipv4=off;
 
     location / {
         proxy_pass http://${SERVER_HOST}:${SERVER_PORT};
