--- a/deploy/server.conf.template
+++ b/deploy/server.conf.template
@@ -18,7 +18,7 @@ server {
     }
 
     location = / {
-            proxy_pass http://${SERVER_HOST}:${SERVER_PORT};
+            proxy_pass http://${SERVER_HOST}:${SERVER_PORT}/api;
     }
 
     location / {
